--- a/.github/workflows/backend-tests-action/action.yml
+++ b/.github/workflows/backend-tests-action/action.yml
@@ -23,6 +23,7 @@ runs:
     using: 'composite'
     steps:
         - name: Start stack with Docker Compose
+          shell: bash
           run: |
               docker-compose -f docker-compose.dev.yml down
               docker-compose -f docker-compose.dev.yml up -d db clickhouse zookeeper kafka redis &
@@ -34,6 +35,7 @@ runs:
 
         - name: Install SAML (python3-saml) dependencies (not required for Cloud or FOSS)
           if: ${{ inputs.saml }}
+          shell: bash
           run: |
               sudo apt-get update
               sudo apt-get install libxml2-dev libxmlsec1-dev libxmlsec1-openssl
@@ -48,16 +50,19 @@ runs:
 
         - name: Install python dependencies
           if: steps.cache-backend-tests.outputs.cache-hit != 'true'
+          shell: bash
           run: |
               python -m pip install -r requirements-dev.txt
               python -m pip install -r requirements.txt
 
         - name: Install SAML python dependencies
           if: ${{ inputs.saml }}
+          shell: bash
           run: |
               python -m pip install python3-saml==1.12.0
 
         - name: Check migrations
+          shell: bash
           run: |
               python manage.py makemigrations --check --dry-run
               git fetch origin master
@@ -67,9 +72,11 @@ runs:
               git diff --name-status origin/master..HEAD | grep "A\tposthog/migrations/" | awk '{print $2}' | python manage.py test_migrations_are_null
 
         - name: Add kafka host to /etc/hosts for kafka connectivity
+          shell: bash
           run: sudo echo "127.0.0.1 kafka" | sudo tee -a /etc/hosts
 
         - name: Set up needed files
+          shell: bash
           run: |
               mkdir -p frontend/dist
               touch frontend/dist/index.html
@@ -77,20 +84,24 @@ runs:
               touch frontend/dist/shared_dashboard.html
 
         - name: Wait for Clickhouse & Kafka
+          shell: bash
           run: bin/check_kafka_clickhouse_up
 
         - name: Run FOSS tests
           if: ${{ inputs.foss }}
+          shell: bash
           run: |
               pytest -m "not ee" posthog/ --cov  --cov-report=xml:coverage-postgres.xml
 
         - name: Run SAML tests
           if: ${{ inputs.saml }}
+          shell: bash
           run: |
               pytest ee -m "saml_only"
 
         - name: Run ee/ tests
           if: ${{ inputs.ee }}
+          shell: bash
           run: |
               pytest ee -m "not saml_only" \
                   --splits ${{ inputs.concurrency }} \
@@ -101,6 +112,7 @@ runs:
 
         - name: Run pytest.mark.ee tests
           if: ${{ inputs.ee && inputs.group == '1' }}
+          shell: bash
           run: |
               pytest posthog -m "ee"
 
