--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -446,6 +446,7 @@ services:
             - ./otel-collector-config.dev.yaml:/etc/otel-collector-config.yaml
             # mount docker containers dir so we can ship the docker logs to local posthog
             - /var/lib/docker/containers:/var/lib/docker/containers:ro
+            - /var/run/docker.sock:/var/run/docker.sock:ro
         ports:
             - '4317:4317' # OTLP gRPC receiver (mapped to host)
             - '4318:4318' # OTLP HTTP receiver (mapped to host)
