--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -50,6 +50,8 @@ posthog-rs = { version = "0.3.5", default-features = false }
 sha2 = "0.10.9"
 urlencoding = "2.1.3"
 rayon = "1.11.0"
+zip = { version = "2.2", default-features = false, features = ["deflate"] }
+plist = "1"
 
 [dev-dependencies]
 test-log = "0.2.17"
