--- a/bin/mprocs.yaml
+++ b/bin/mprocs.yaml
@@ -89,17 +89,17 @@ procs:
 
     # This takes ~10 s
     migrate-postgres:
-        shell: 'bin/check_postgres_up && bin/check_ducklake_up && python manage.py migrate'
+        shell: 'bin/check_postgres_up && bin/check_ducklake_up && bin/migrate --scope=postgres'
 
     # This takes ~10 s too
     migrate-clickhouse:
-        shell: 'bin/check_kafka_clickhouse_up && bin/check_ducklake_up && python manage.py migrate_clickhouse'
+        shell: 'bin/check_kafka_clickhouse_up && bin/check_ducklake_up && bin/migrate --scope=clickhouse'
 
     migrate-persons-db:
-        shell: 'bin/check_postgres_up posthog_persons && cd rust && DATABASE_URL=postgres://posthog:posthog@localhost:5432/posthog_persons sqlx migrate run --source persons_migrations'
+        shell: 'bin/check_postgres_up posthog_persons && bin/migrate --scope=persons'
 
     migrate-behavioral-cohorts:
-        shell: 'bin/check_postgres_up behavioral_cohorts && rust/bin/migrate-behavioral-cohorts'
+        shell: 'bin/check_postgres_up behavioral_cohorts && bin/migrate --scope=behavioral-cohorts'
 
     generate-demo-data:
         shell: |-
