--- a/.github/workflows/ci-backend-update-test-timing.yml
+++ b/.github/workflows/ci-backend-update-test-timing.yml
@@ -3,6 +3,11 @@ name: Backend CI - Update test timing
 on:
     workflow_dispatch:
 
+permissions:
+    contents: write
+    pull-requests: write
+    actions: write
+
 env:
     SECRET_KEY: '6b01eee4f945ca25045b5aab440b953461faf08693a9abbf1166dc7c6b9772da' # unsafe - for testing only
     DATABASE_URL: 'postgres://posthog:posthog@localhost:5432/posthog'
@@ -27,7 +32,7 @@ jobs:
               with:
                   concurrency: 1
                   group: 1
-                  token: ${{ secrets.POSTHOG_BOT_PAT }}
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   python-version: '3.12.12'
                   clickhouse-server-image: 'clickhouse/clickhouse-server:25.8.12.129'
                   segment: 'FOSS'
