--- a/.github/workflows/build-hogql-parser.yml
+++ b/.github/workflows/build-hogql-parser.yml
@@ -6,6 +6,11 @@ on:
             - common/hogql_parser/**
             - .github/workflows/build-hogql-parser.yml
 
+permissions:
+    contents: write
+    pull-requests: write
+    actions: write
+
 concurrency:
     group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
     cancel-in-progress: true
@@ -34,6 +39,8 @@ jobs:
             - name: Check if version was bumped
               shell: bash
               id: version
+              env:
+                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
                   parser_release_needed='false'
                   if [[ ${{ steps.changed-files.outputs.parser_any_changed }} == 'true' ]]; then
@@ -43,7 +50,7 @@ jobs:
                       parser_release_needed='true'
                     else
                       message_body="It looks like the code of \`hogql-parser\` has changed since last push, but its version stayed the same at $local. 👀\nMake sure to resolve this in \`hogql_parser/setup.py\` before merging!${{ github.event.pull_request.head.repo.full_name != 'PostHog/posthog' && '\nThis needs to be performed on a branch created on the PostHog/posthog repo itself. A PostHog team member will assist with this.' || ''}}"
-                      curl -s -u posthog-bot:${{ secrets.POSTHOG_BOT_PAT || secrets.GITHUB_TOKEN }} -X POST -d "{ \"body\": \"$message_body\" }" "https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments"
+                      gh pr comment ${{ github.event.pull_request.number }} --body "$message_body"
                     fi
                   fi
                   echo "parser-release-needed=$parser_release_needed" >> $GITHUB_OUTPUT
@@ -144,7 +151,6 @@ jobs:
 
             - uses: actions/checkout@v4
               with:
-                  token: ${{ secrets.POSTHOG_BOT_PAT }}
                   ref: ${{ github.event.pull_request.head.ref }}
 
             - name: Set up Python
@@ -181,4 +187,4 @@ jobs:
                   add: '["pyproject.toml", "uv.lock"]'
                   message: 'Use new hogql-parser version'
                   default_author: github_actions
-                  github_token: ${{ secrets.POSTHOG_BOT_PAT }}
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
