--- a/.github/workflows/cd-ai-evals-image.yml
+++ b/.github/workflows/cd-ai-evals-image.yml
@@ -15,6 +15,9 @@ on:
             - 'plugin-server/**'
     pull_request:
     workflow_dispatch:
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 jobs:
     posthog_ai_evals_build:
