--- a/.github/workflows/ci-livestream.yml
+++ b/.github/workflows/ci-livestream.yml
@@ -5,6 +5,9 @@ on:
         paths:
             - '.github/workflows/ci-livestream.yml'
             - 'livestream/**'
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 jobs:
     test:
