--- a/.github/workflows/ci-nodejs.yml
+++ b/.github/workflows/ci-nodejs.yml
@@ -5,6 +5,9 @@ on:
     push:
         branches:
             - master
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 env:
     OBJECT_STORAGE_ENABLED: true
