--- a/.github/workflows/codespaces.yml
+++ b/.github/workflows/codespaces.yml
@@ -17,6 +17,9 @@ on:
             - opened
             - labeled
             - synchronize
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 jobs:
     build:
