--- a/.github/workflows/docs-preview-trigger.yml
+++ b/.github/workflows/docs-preview-trigger.yml
@@ -11,6 +11,9 @@ on:
         paths:
             - 'docs/published/**'
             - 'docs/onboarding/**'
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 permissions:
     pull-requests: write
