--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -14,6 +14,9 @@ on:
                 type: string
     pull_request:
     merge_group:
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 concurrency:
     group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
