--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,6 +44,9 @@ on:
     push:
         tags:
             - '**[0-9]+.[0-9]+.[0-9]+*'
+    # allow this to be triggered after committing with the GITHUB_TOKEN
+    repository_dispatch:
+        types: [pr-update]
 
 jobs:
     # Run 'dist plan' (or host) to determine what tasks we need to do
