--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -241,7 +241,8 @@ jobs:
                   fi
 
                   # Extract bazel test targets (excluding the legacy_pytest marker)
-                  TEST_TARGETS=$(echo "$TARGETS" | tr ' ' '\n' | grep -E ':tests_' | grep -v legacy_pytest | tr '\n' ' ' || true)
+                  # Match :tests, :tests_*, or /tests (package path with implicit default target)
+                  TEST_TARGETS=$(echo "$TARGETS" | tr ' ' '\n' | grep -E '(:tests($|_)|/tests$)' | grep -v legacy_pytest | grep -v '\.venv' | tr '\n' ' ' || true)
                   if [[ -n "$TEST_TARGETS" ]]; then
                     echo "bazel_targets=$TEST_TARGETS" >> $GITHUB_OUTPUT
                     echo "has_bazel_targets=true" >> $GITHUB_OUTPUT
@@ -1223,12 +1224,13 @@ jobs:
 
     async-migrations:
         name: Async migrations tests -  ${{ matrix.clickhouse-server-image }}
-        needs: [changes]
+        needs: [changes, bazel-coordinator]
         strategy:
             fail-fast: false
             matrix:
                 clickhouse-server-image: ['clickhouse/clickhouse-server:25.8.12.129']
-        if: needs.changes.outputs.backend == 'true'
+        # Only run if bazel-coordinator says legacy code changed
+        if: needs.changes.outputs.backend == 'true' && needs.bazel-coordinator.outputs.run_legacy == 'true'
         runs-on: depot-ubuntu-latest
         steps:
             - name: 'Checkout repo'
